// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightApplicationsPresenter renders an error 1`] = `
<Card
  width={100}
>
  <LoadingOrErrorPresenter
    error="error"
    loading={false}
  />
</Card>
`;

exports[`LightApplicationsPresenter renders correctly when there are applications 1`] = `
<Card
  width={100}
>
  <div
    className="ant-list ant-list-split"
  >
    <div
      className="ant-list-header"
    >
      <li
        className="ant-list-item"
      >
        <div
          className="ant-list-item-meta"
        >
          <div
            className="ant-list-item-meta-content"
          >
            <h4
              className="ant-list-item-meta-title"
            >
              Name
            </h4>
          </div>
        </div>
        <div
          className="ant-list-item-meta"
        >
          <div
            className="ant-list-item-meta-content"
          >
            <h4
              className="ant-list-item-meta-title"
            >
              Exposed as a service
            </h4>
          </div>
        </div>
      </li>
    </div>
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <ul
          className="ant-list-items"
        >
          <li
            className="ant-list-item"
          >
            <div
              className="ant-list-item-meta"
            >
              <div
                className="ant-list-item-meta-content"
              >
                <h4
                  className="ant-list-item-meta-title"
                >
                  a
                </h4>
              </div>
            </div>
            <div
              className="ant-list-item-meta"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</Card>
`;

exports[`LightApplicationsPresenter renders loading 1`] = `
<Card
  width={100}
>
  <LoadingOrErrorPresenter
    error=""
    loading={true}
  />
</Card>
`;
